--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,9 @@
     <color name="chat">#4C7EC8</color>
     <color name="green">#1A4A05</color>
     <color name="bg">#EFFBF9</color>
+    <color name="colorTextBackground">#f5f5f5</color>
+    <color name="colorText">#464646</color>
+    <color name="colorItemLeft">#E6E4E4</color>
+    <color name="colorItemRight">#813fd7</color>
+    <color name="colorWhite">#fff</color>
 </resources>
